# ig-qtrades4241

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  DEPLOY.md  QUICKSTART.md  SESSION_STATE.md
docs/superpowers/plans/: 2026-05-17-ig-forex-automation.md
docs/superpowers/specs/: 2026-05-17-ig-forex-automation-design.md
scripts/: _evergreen_seeds.py  backup_session.sh  generate_evergreen.py  generate_evergreen_loop.py  ig_login_first_time.py  migrate_db.py  reset_compose.py  restore_session.sh  run_pipeline.py  run_review_bot.py  seed_evergreen.py  test_review.py
src/ig_qt/: __init__.py  __main__.py  app.py  audit.py  caption_variability.py  config.py  db.py  health.py  logging_setup.py  metrics.py  models.py  notifier.py  notifier_review.py  pipeline_health.py  scheduler.py  stories_runtime.py
src/ig_qt/admin/: cleanup.py  warmup_mode.py
src/ig_qt/analyst/: __init__.py  angle_generator.py  evergreen.py  ranker.py  runner.py  schemas.py
src/ig_qt/llm/: __init__.py  (+6 more)
templates/: _base.html  base.css  big_number_hero.html  event_card.html  headline_card.html  market_recap.html  news_breaking.html  panel_infographic.html
tests/: conftest.py  test_app.py  test_audit.py  test_config.py  test_db.py  test_health.py  test_llm_factory.py  test_logging_setup.py  test_notifier.py  test_pipeline_e2e.py  test_scheduler.py  test_stories_runtime.py
tests/admin/: test_cleanup.py  test_warmup_mode.py
tests/analyst/: test_angle_generator.py  test_evergreen.py  test_prompts.py  test_ranker.py  test_runner.py  test_schemas.py
tests/collector/: test_base.py  test_dedup.py  test_forex_factory.py  test_gnews.py  test_news_api.py  test_pipeline.py  test_playwright_runner.py  test_twelve_data.py  test_yfinance_src.py
tests/composer/: test_caption.py  test_chart_renderer.py  test_html_renderer.py  test_pillow_fallback.py  test_postprocess.py  test_runner.py  test_stories.py
tests/publisher/: test_ig_client.py  test_rate_limiter.py  test_runner.py  test_skip_day.py  test_warmup.py
(+41 files in other folders)
