[project]
name = "ig-qt"
version = "0.1.0"
description = "Automated Instagram content system for forex/finance accounts"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "playwright>=1.47",
    "beautifulsoup4>=4.12",
    "yfinance>=0.2.40",
    "python-dateutil>=2.9",
    "mplfinance>=0.12.10b0",
    "pandas>=2.2",
    "pillow>=10.4",
    "jinja2>=3.1",
    "instagrapi>=2.1",
    "apscheduler>=3.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.6",
    "types-pyyaml>=6.0",
    "types-python-dateutil>=2.9",
    "pandas-stubs>=2.2",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/ig_qt"]

[tool.hatch.build.targets.wheel.force-include]
"src/ig_qt/analyst/prompts/ranker.v1.md" = "ig_qt/analyst/prompts/ranker.v1.md"
"src/ig_qt/analyst/prompts/composer.v1.md" = "ig_qt/analyst/prompts/composer.v1.md"
"src/ig_qt/analyst/prompts/evergreen.v1.md" = "ig_qt/analyst/prompts/evergreen.v1.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
exclude = ["build/", "dist/"]

[[tool.mypy.overrides]]
module = ["instagrapi.*", "mplfinance.*", "yfinance.*", "bs4.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RET", "SIM"]
# ASYNC240: we use stdlib pathlib (sync I/O) inside async functions on purpose;
# scope is single-instance VPS, no need for trio/anyio.
ignore = ["S101", "ASYNC240"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]
